@@ -1,3 +1,9 @@
+2008-02-20  Vincent Untz  <vuntz@gnome.org>
+
+	* gnome-desktop-item-edit.c: (main): make creating .desktop files with
+	--create-new work again. Also fix a leak.
+	Fix bug #517617
+
 2008-02-13  Vincent Untz  <vuntz@gnome.org>
 
 	* panel-menu-items.c: (panel_place_menu_item_append_gtk_bookmarks):
